--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							<li><a href="images/wx.jpg" target="_blank" class="icon fa-weixin"><span class="label">wechat</span></a></li>
 							<li><a href="http://www.linkedin.com/in/ghostzhao" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://plus.google.com/108924561266449982710" target="_blank" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-					                <li><a href="itms-i services:///?action=download-manifest&url=https://www.zhaohui.me/ssr.plist" target="_blank" class="fas fa-rocket"><span class="label">SSR</span></a></li>
+					                <li><a href="itms-services:///?action=download-manifest&url=https://www.zhaohui.me/ssr.plist" target="_blank" class="icon fa-rocket"><span class="label">SSR</span></a></li>
 
 						</ul>
 						<hr />
