--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			</div>
 			<footer>
 				<ul id="copyright">
-					<li>Copyright &copy; 2016 Zhaohui. All Rights Reserved.</li>
+					<li>Copyright &copy; 2016 Ghost. All Rights Reserved.</li>
 				</ul>
 			</footer>
 		</article>
